Another gap filled